# Matrix_Lab

./: CMakeLists.txt  GaussianInversion.cpp  GaussianInversion.h  Inversion.hpp  Matrix.cpp  Matrix.h  MinorInversion.cpp  MinorInversion.hpp  README.md  main.cpp  matrix  run  test.hpp  test.uxf
inverse_test_data/: amswer2.txt  answer1.txt  answer2.txt  op_ans.txt  out.txt  test1.txt  test2.txt
